--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 server.port=8082
+
+## Esta propriedade indica que este consumidor ficará escutando/atento
+## a qualquer mensagem/evento que chegar no kafka que está rodando na porta 29092
+spring.kafka.consumer.bootstrap-servers: localhost:29092
+
+## Nome do grupo é importante para o caso de termos vários consumidores buscando do mesmo tópico
+spring.kafka.consumer.group-id: email
+
+##  Configurando a deserialização do objeto para JSON
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+## tem que ser o mesmo nome do tópico que foi definido lá no Produtor ( micro serviço order-service )
+spring.kafka.topic.name=order_topics
+
+
