--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 ## tem que ser o mesmo nome do tópico que foi definido lá no Produtor ( micro serviço order-service )
 spring.kafka.topic.name=order_topics
 
+spring.data.mongodb.uri=mongodb://localhost:27017/order-service
+#Esta conexão é para rodar pelo docker
+#spring.data.mongodb.uri=mongodb://balta:e296cd9f@localhost:27017/admin
