--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.topic.name=order_topics
 
+spring.data.mongodb.uri=mongodb://localhost:27017/order-service
+backend.order-api.url = ${variable.url:http://localhost:8080/api/v1/orders}
 
 
